--- a/includes/nav_gauche-nav_left-eng.html
+++ b/includes/nav_gauche-nav_left-eng.html
@@ -3,25 +3,25 @@
 <div class="wb-sec-def">
 <!-- SecNavStart -->
 <div class="top-level"><a href="/comm/services-eng.html"><abbr title="Public Works and Government Services Canada">PWGSC</abbr> Services</a></div>
-<div class="top-level"><a href="#">Property and Buildings</a></div>
 
-<section><h3><a href="#">Real Property</a></h3>
+<section><h3><a href="/pac/cse-egd/index-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym></a></h3>
 <ul>
-<li><a href="2col-eng.html">Construction Projects</a></li>
-<li><a href="#">Featured Properties</a></li>
-<li><a href="#">Payments in Lieu of Taxes</a></li>
-<li><a href="#">Real Estate for Sale</a></li>
+<li><a href="/pac/cse-egd/emp-loc-eng.html" title="Location">Location</a></li>
+<li><a href="/pac/cse-egd/services-eng.html" title="Services">Services</a></li>
+<li><a href="/pac/cse-egd/conduite-conduct-eng.html" title="Code of Conduct">Code of Conduct</a></li>
+<li><a href="/pac/cse-egd/entreprises-firms-eng.html" title="Ship Repair Firms">Ship Repair Firms</a></li>
+<li><a href="/pac/cse-egd/env/programme-program-eng.html" title="Environment">Environment</a></li>
+<li><a href="/pac/cse-egd/dimensions-eng.html" title="About the Dock">About the Dock</a></li>
+<li><a href="/pac/cse-egd/historique-history-eng.html" title="History">History</a></li>
+<li><a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm" title="Booking">Booking</a></li>
+<li><a href="/pac/cse-egd/rendement-performance-eng.html" title="Performance Standard">Performance Standard</a></li>
 </ul>
 </section>
 
-<section><h3><a href="#">Real Property Resources</a></h3>
+<section><h3><a href="#"><acronym title="Esquimalt Graving Dock">EGD</acronym> Resources</a></h3>
 <ul>
-<li><a href="#" title="Real Property A-Z Index">A-Z Index</a></li>
-<li><a href="#">Contact Real Property </a></li>
-<li><a href="#" title="Real Property Frequently Asked Questions">Frequently Asked Questions</a></li>
-<li><a href="#">Real Property News</a></li>
-<li><a href="#" title="Real Property Publications and Reports">Publications and Reports</a></li>
-<li><a href="#" title="Real Property Site Map">Site Map</a></li>
+<li><a href="/pac/cse-egd/site-eng.html" title="Site Map">Site Map</a></li>
+<li><a href="/pac/cse-egd/cn-cu-eng.html" title="Contact EGD">Contact <acronym title="Esquimalt Graving Dock">EGD</acronym></a></li>
 </ul>
 </section>
 
