--- a/includes/nav_gauche-nav_left-fra.html
+++ b/includes/nav_gauche-nav_left-fra.html
@@ -3,25 +3,25 @@
 <div class="wb-sec-def">
 <!-- SecNavStart -->
 <div class="top-level"><a href="/comm/services-fra.html">Services de <abbr title="Travaux publics et Services gouvernementaux Canada">TPSGC</abbr></a></div>
-<div class="top-level"><a href="#">Biens et immeubles</a></div>
 
-<section><h3><a href="#">Biens immobiliers</a></h3>
+<section><h3><a href="/pac/cse-egd/index-fra.html"><acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></h3>
 <ul>
-<li><a href="2col-fra.html">Projets de construction</a></li>
-<li><a href="#">Biens immobiliers en vedette</a></li>
-<li><a href="#">Paiements en remplacement d'impôts</a></li>
-<li><a href="#">Biens immobiliers à vendre</a></li>
+<li><a href="/pac/cse-egd/emp-loc-fra.html" title="Emplacement">Emplacement</a></li>
+<li><a href="/pac/cse-egd/services-fra.html" title="Services">Services</a></li>
+<li><a href="/pac/cse-egd/conduite-conduct-fra.html" title="Code de conduite">Code de conduite</a></li>
+<li><a href="/pac/cse-egd/entreprises-firms-fra.html" title="Entreprises de radoub">Entreprise de radoub</a></li>
+<li><a href="/pac/cse-egd/env/programme-program-fra.html" title="Environnement">Environnement</a></li>
+<li><a href="/pac/cse-egd/dimensions-fra.html" title="Renseignements g&eacute;n&eacute;raux">Renseignements g&eacute;n&eacute;raux</a></li>
+<li><a href="/pac/cse-egd/historique-history-fra.html" title="Historique">Historique</a></li>
+<li><a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm" title="R&eacute;servation">R&eacute;servation</a></li>
+<li><a href="/pac/cse-egd/rendement-performance-fra.html" title="Norme de rendement">Norme de rendement</a></li>
 </ul>
 </section>
 
-<section><h3><a href="#">Ressources - Biens immobiliers</a></h3>
+<section><h3><a href="#">Ressources <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></h3>
 <ul>
-<li><a href="#" title="Biens immobiliers Index A-Z">Index A-Z</a></li>
-<li><a href="#">Communiquez avec les Biens immobiliers </a></li>
-<li><a href="#" title="Biens immobiliers Foires aux questions (FAQ)">Foires aux questions (FAQ)</a></li>
-<li><a href="#">Biens immobiliers nouvelles</a></li>
-<li><a href="#" title="Biens immobiliers Publications et rapports">Publications et rapports</a></li>
-<li><a href="#" title="Biens immobiliers Plan du site">Plan du site</a></li>
+<li><a href="/pac/cse-egd/site-fra.html" title="Plan du site">Plan du site</a></li>
+<li><a href="/pac/cse-egd/cn-cu-fra.html" title="Contactez CSE">Contactez <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
 </ul>
 </section>
 
