--- a/includes/pain-bread-section-eng.html
+++ b/includes/pain-bread-section-eng.html
@@ -1,3 +1,5 @@
 <!-- Start of pain-bread-section-eng.html / Début de pain-bread-section-eng.html -->
-<li><a href="index-eng.html">PWGSC GC Web Usability theme</a></li>
+<li><a href="http://www.tpsgc-pwgsc.gc.ca/apropos-about/rgnstnnll-rgnztnal-eng.html">Organization</a></li>
+<li><a href="/pac/index-eng.html">Pacific</a></li>
+<li><a href="/pac/cse-egd/index-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym></a></li>
 <!-- End of pain-bread-section-eng.html / Fin De pain-bread-section-eng.html -->
