Convert acronym tags to abbr

--- a/includes/nav_gauche-nav_left-eng.html
+++ b/includes/nav_gauche-nav_left-eng.html
@@ -4,7 +4,7 @@
 <!-- SecNavStart -->
 <div class="top-level"><a href="/comm/services-eng.html"><abbr title="Public Works and Government Services Canada">PWGSC</abbr> Services</a></div>
 
-<section><h3><a href="/pac/cse-egd/index-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym></a></h3>
+<section><h3><a href="/pac/cse-egd/index-eng.html"><abbr title="Esquimalt Graving Dock">EGD</abbr></a></h3>
 <ul>
 <li><a href="/pac/cse-egd/emp-loc-eng.html" title="Location">Location</a></li>
 <li><a href="/pac/cse-egd/services-eng.html" title="Services">Services</a></li>
@@ -18,10 +18,10 @@
 </ul>
 </section>
 
-<section><h3><a href="#"><acronym title="Esquimalt Graving Dock">EGD</acronym> Resources</a></h3>
+<section><h3><a href="#"><abbr title="Esquimalt Graving Dock">EGD</abbr> Resources</a></h3>
 <ul>
 <li><a href="/pac/cse-egd/site-eng.html" title="Site Map">Site Map</a></li>
-<li><a href="/pac/cse-egd/cn-cu-eng.html" title="Contact EGD">Contact <acronym title="Esquimalt Graving Dock">EGD</acronym></a></li>
+<li><a href="/pac/cse-egd/cn-cu-eng.html" title="Contact EGD">Contact <abbr title="Esquimalt Graving Dock">EGD</abbr></a></li>
 </ul>
 </section>
 
