--- a/includes/nav_gauche-nav_left-fra.html
+++ b/includes/nav_gauche-nav_left-fra.html
@@ -4,7 +4,7 @@
 <!-- SecNavStart -->
 <div class="top-level"><a href="/comm/services-fra.html">Services de <abbr title="Travaux publics et Services gouvernementaux Canada">TPSGC</abbr></a></div>
 
-<section><h3><a href="/pac/cse-egd/index-fra.html"><acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></h3>
+<section><h3><a href="/pac/cse-egd/index-fra.html"><abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr></a></h3>
 <ul>
 <li><a href="/pac/cse-egd/emp-loc-fra.html" title="Emplacement">Emplacement</a></li>
 <li><a href="/pac/cse-egd/services-fra.html" title="Services">Services</a></li>
@@ -18,10 +18,10 @@
 </ul>
 </section>
 
-<section><h3><a href="#">Ressources <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></h3>
+<section><h3><a href="#">Ressources <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr></a></h3>
 <ul>
 <li><a href="/pac/cse-egd/site-fra.html" title="Plan du site">Plan du site</a></li>
-<li><a href="/pac/cse-egd/cn-cu-fra.html" title="Contactez CSE">Contactez <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
+<li><a href="/pac/cse-egd/cn-cu-fra.html" title="Contactez CSE">Contactez <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr></a></li>
 </ul>
 </section>
 
