--- a/includes/nav_droite-nav_right-eng.html
+++ b/includes/nav_droite-nav_right-eng.html
@@ -4,30 +4,32 @@
 <div class="span-2">
 
 <div class="span-2 module-related">
-	<h3>H3 1 class="module-related"</h3>
+	<h3>Did you know?</h3>
 		<ul>
-			<li><a href="#">Link 1</a></li>
-			<li><a href="#">Link 2</a></li>
+			<li>
+        <abbr title="Esquimalt Graving Dock">EGD</abbr> is one of the few large ship repair facilities in the world who has implemented
+				<abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001.  <a title="EGD: Leading the Way with ISO 14001" href="/pac/cse-egd/env/voie-way-eng.html">More &gt; </a>
+      </li>
 		</ul>
 </div>
 
 <div class="span-2 module-related">
-	<h4>H4 2 class="module-related"</h4>
+	<h3>What's New</h3>
 		<ul>
-			<li><a href="#">Link 1</a></li>
-			<li><a href="#">Link 2</a></li>
+      <li>
+        <a title="EGD: Electrical Lockout Policy" href="/pac/cse-egd/avis-notices-eng.html">New Electrical Lockout, Policy, Procedures &amp; Records</a>
+      </li>
+      <li>
+        <a title="EGD: Capital Projects" href="/pac/cse-egd/env/projects-projets-eng.html">Upcoming capital projects impacting operations for the Esquimalt Graving Dock</a>
+      </li>
+      <li>
+        <a title="EGD Regulations" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-eng.html">Regulations amending the Esquimalt Graving Dock regulations.</a>
+      </li>
 		</ul>
 </div>
-
-<div class="span-2 module-menu-section">
-		<h2>H2 3 Section menu - module-menu-section</h2>
-		<ul>
-			<li><a href="#">Link 1</a></li>
-			<li><a href="#">Link 2</a></li>
-		</ul>
-</div> 
-
 
 </div>
 <!-- MODULE END -->
 <!-- End of nav_droite-nav_right-eng.html / Fin De nav_droite-nav_right-eng.html -->
+
+
