--- a/includes/nav_droite-nav_right-fra.html
+++ b/includes/nav_droite-nav_right-fra.html
@@ -3,29 +3,22 @@
 <div class="span-2">
 
 <div class="span-2 module-related">
-	<h3>H3 class="module-related"</h3>
+	<h3>Saviez-vous?</h3>
 		<ul>
-			<li><a href="#">Liens 1</a></li>
-			<li><a href="#">Liens 2</a></li>
+			<li>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est une des rares installations de r&eacute;paration de grands b&acirc;timents au monde &agrave; avoir adopt&eacute; la norme <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001.  <a title="CSE: Tracer la voie &agrave; la norme ISO 14001" href="/pac/cse-egd/env/voie-way-fra.html">D&eacute;tails &gt; </a></li>
 		</ul>
 </div>
 
 <div class="span-2 module-related">
-	<h4>H4 class="module-related"</h4>
+	<h4>Quoi de neuf...</h4>
 		<ul>
-			<li><a href="#">Liens 1</a></li>
-			<li><a href="#">Liens 2</a></li>
+			<li><a title="CSE: Nouvelle politique sur les proc&#233;dures de verrouillage &#233;lectrique" href="/pac/cse-egd/avis-notices-fra.html">Nouvelle politique sur les proc&#233;dures de verrouillage &#233;lectrique</a></li>
+      <li><a title="CSE: Futurs projets" href="/pac/cse-egd/env/projects-projets-fra.html">Futurs projets d'investissement impact sur les op&eacute;rations de la cale s&egrave;che d'Esquimalt.  </a></li>
+			<li><a title="CSE Reglement" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-fra.html">R&egrave;glement modifiant le R&egrave;glement de&nbsp;1989 sur la cale s&egrave;che d&iquest;Esquimalt.</a></li>
 		</ul>
 </div>
-
-<div class="span-2 module-menu-section">
-		<h2>H2 Section menu - module-menu-section</h2>
-		<ul>
-			<li><a href="#">Link 1</a></li>
-			<li><a href="#">Link 2</a></li>
-		</ul>
-</div> 
 
 </div>
 <!-- MODULE END -->
 <!-- End of nav_droite-nav_right-fra.html / Fin De nav_droite-nav_right-fra.html -->
+
