--- a/includes/nav_droite-nav_right-fra.html
+++ b/includes/nav_droite-nav_right-fra.html
@@ -5,7 +5,7 @@
 <div class="span-2 module-related">
 	<h3>Saviez-vous?</h3>
 		<ul>
-			<li>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est une des rares installations de r&eacute;paration de grands b&acirc;timents au monde &agrave; avoir adopt&eacute; la norme <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001.  <a title="CSE: Tracer la voie &agrave; la norme ISO 14001" href="/pac/cse-egd/env/voie-way-fra.html">D&eacute;tails &gt; </a></li>
+			<li>La <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr> est une des rares installations de r&eacute;paration de grands b&acirc;timents au monde &agrave; avoir adopt&eacute; la norme <abbr title="Organisation internationale de normailisation">ISO</abbr>&nbsp;14001.  <a title="CSE: Tracer la voie &agrave; la norme ISO 14001" href="/pac/cse-egd/env/voie-way-fra.html">D&eacute;tails &gt; </a></li>
 		</ul>
 </div>
 
