--- a/includes/pain-bread-section-fra.html
+++ b/includes/pain-bread-section-fra.html
@@ -1,5 +1,5 @@
 <!-- Start of pain-bread-section-fra.html / Début de pain-bread-section-fra.html -->
 <li><a href="http://www.tpsgc-pwgsc.gc.ca/apropos-about/rgnstnnll-rgnztnal-fra.html">Organisation</a></li>
 <li><a href="/pac/index-fra.html">Pacifique</a></li>
-<li><a href="/pac/cse-egd/index-fra.html"><acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
+<li><a href="/pac/cse-egd/index-fra.html"><abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr></a></li>
 <!-- End of pain-bread-section-fra.html / Fin De pain-bread-section-fra.html -->
