Make titles match

--- a/includes/nav_droite-nav_right-eng.html
+++ b/includes/nav_droite-nav_right-eng.html
@@ -23,7 +23,7 @@
         <a title="EGD: Capital Projects" href="/pac/cse-egd/env/projects-projets-eng.html">Upcoming capital projects impacting operations for the Esquimalt Graving Dock</a>
       </li>
       <li>
-        <a title="EGD Regulations" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-eng.html">Regulations amending the Esquimalt Graving Dock regulations.</a>
+        <a title="EGD Regulations" rel="external" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-eng.html">Regulations amending the Esquimalt Graving Dock regulations.</a>
       </li>
 		</ul>
 </div>
