--- a/includes/nav_droite-nav_right-fra.html
+++ b/includes/nav_droite-nav_right-fra.html
@@ -14,7 +14,7 @@
 		<ul>
 			<li><a title="CSE: Nouvelle politique sur les proc&#233;dures de verrouillage &#233;lectrique" href="/pac/cse-egd/avis-notices-fra.html">Nouvelle politique sur les proc&#233;dures de verrouillage &#233;lectrique</a></li>
       <li><a title="CSE: Futurs projets" href="/pac/cse-egd/env/projects-projets-fra.html">Futurs projets d'investissement impact sur les op&eacute;rations de la cale s&egrave;che d'Esquimalt.  </a></li>
-			<li><a title="CSE Reglement" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-fra.html">R&egrave;glement modifiant le R&egrave;glement de&nbsp;1989 sur la cale s&egrave;che d&iquest;Esquimalt.</a></li>
+			<li><a title="CSE Reglement" rel="external" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-fra.html">R&egrave;glement modifiant le R&egrave;glement de&nbsp;1989 sur la cale s&egrave;che d&iquest;Esquimalt.</a></li>
 		</ul>
 </div>
 
